# cmake-library-builder

./: README.md
libnl/: README.md  libnl.cmake
libnl/example/: CMakeLists.txt  nlinfo.c
libpcap/: README.md  libpcap.cmake
libpcap/example/: CMakeLists.txt  packet_analyzer.c
libsodium/: README.md  libsodium.cmake
libsodium/example/: CMakeLists.txt  securebox.c
libzip/: README.md  libzip.cmake
libzip/example/: CMakeLists.txt  zip_tool.c
mbedtls/: README.md  mbedtls.cmake
mbedtls/example/client/: CMakeLists.txt  main.c
mbedtls/example/server/: CMakeLists.txt  main.c
openssl/: README.md  openssl.cmake  toolchain.cmake.sample
openssl/example/client/: CMakeLists.txt  main.c
openssl/example/server/: CMakeLists.txt  main.c
zlib/: README.md  zlib.cmake
zlib/example/: CMakeLists.txt  zlib_tool.c
